--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "highlight.js": "9.7.0",
     "imports-loader": "0.6.5",
     "inquirer": "1.2.1",
+    "js-beautify": "1.6.4",
     "jshint": "2.9.3",
     "jshint-jsx": "0.5.0",
     "jshint-stylish": "2.2.1",
